<resources>
    <string name="app_name">WashingMachine</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="home1">ΕΠΙΛΟΓΗ ΠΡΟΓΡΑΜΜΑΤΟΣ</string>
    <string name="home2">ΡΥΘΜΙΣΕΙΣ ΠΛΥΝΤΗΡΙΟΥ</string>


    <string name="normal15">ΚΑΝΟΝΙΚΟ 15\'</string>
    <string name="light">ΕΛΑΦΡΥ 60\'</string>
    <string name="power">ΙΣΧΥΡΟ 60\'</string>

    <string name="spinner"><u>ΘΕΡΜΟΚΡΑΣΙΑ</u></string>
    <string name="descr1"><u>ΠΡΟΓΡΑΜΜΑ - ΔΙΑΡΚΕΙΑ</u></string>
    <string name="descr2"><u>ΕΠΙΠΛΕΟΝ ΕΠΙΛΟΓΕΣ</u></string>



    <string name="next">ΕΠΟΜΕΝΟ</string>


    <string name="settings">ΡΥΘΜΙΣΕΙΣ</string>
    <string name="notification">ΕΙΔΟΠΟΙΗΣΕΙΣ</string>
    <string name="wifi">ΑΠΕΝΕΡΓΟΠΟΙΗΣΗ WiFi</string>
    <string name="working">Το πλυντήριο είναι σε:</string>
    <string name="in_working"><u>ΛΕΙΤΟΥΡΓΙΑ</u></string>
    <string name="example">ΚΑΝΟΝΙΚΟ 30 ΞΕΒΓΑΛΜΑ</string>
    <string name="pause">ΠΑΥΣΗ</string>
    <string name="cancel">ΤΕΡΜΑΤΙΣΜΟΣ</string>
    <string name="extra1">ΣΤΥΨΙΜΟ 15\'</string>
    <string name="extra2">ΞΕΒΓΑΛΜΑ 20\'</string>
    <string name="laundrying_time">Εκτιμώμενος χρόνος ολοκλήρωσης: 15\'</string>
    <string name="favourite"><u>ΑΓΑΠΗΜΕΝΟ ΠΡΟΓΡΑΜΜΑ</u></string>
    <string name="fav_temp">ΘΕΡΜΟΚΡΑΣΙΑ 30</string>
    <string name="paused">ΠΑΥΣΗ</string>
    <string name="continued">ΣΥΝΕΧΙΣΗ ΠΛΥΣΗΣ</string>
    <string name="on_pause">Εκτιμώμενος χρόνος λειτουργίας ΠΑΥΣΗ</string>
    <string name="cancel_confirmation">ΘΕΛΕΤΕ ΝΑ ΑΚΥΡΩΣΕΤΕ ΤΗΝ ΠΛΥΣΗ;</string>
    <string name="backin">ΕΠΙΣΤΡΟΦΗ ΣΤΗΝ ΠΛΥΣΗ</string>
    <string name="cancelling">ΑΚΥΡΩΣΗΣ ΠΛΥΣΗΣ</string>
    <string name="cancelled_conf">Η ΠΛΥΣΗ ΑΚΥΡΩΘΗΚΕ ΜΕ ΕΠΙΤΥΧΙΑ</string>
    <string name="home_page">ΕΠΙΣΤΡΟΦΗ ΣΤΗΝ ΑΡΧΙΚΗ ΣΕΛΙΔΑ</string>
    <string name="door">ΑΝΟΙΓΜΑ ΠΟΡΤΑΣ ΠΛΥΝΤΗΡΙΟΥ</string>
    <string name="program_info">ΔΙΑΛΕΞΕ ΠΡΟΓΡΑΜΜΑ</string>
    <string name="temp_info">ΔΙΑΛΕΞΕ ΘΕΡΜΟΚΡΑΣΙΑ</string>
    <string name="extra_info">ΔΙΑΛΕΞΕ ΕΠΙΠΛΕΟΝ ΕΠΙΛΟΓΕΣ</string>
    <string name="favourite_info">ΕΝΑΛΛΑΚΤΙΚΑ ΔΙΑΛΕΞΕ ΤΟ ΑΓΑΠΗΜΕΝΟ ΣΟΥ ΠΡΟΓΡΑΜΜΑ</string>
    <string name="advices">ΣΥΜΒΟΥΛΕΣ ΓΙΑ ΤΟ ΠΛΥΣΙΜΟ ΤΩΝ ΡΟΥΧΩΝ</string>
    <string name="in_60"><u>60 ΒΑΘΜΟΙ</u></string>
    <string name="in_90"><u>90 ΒΑΘΜΟΙ</u></string>
    <string name="in_30"><u>30 ΒΑΘΜΟΙ</u></string>
    <string name="in_40"><u>40 ΒΑΘΜΟΙ</u></string>
    <string name="text_30">Αυτή η θερμοκρασία είναι αρκετά ήπια, φιλική προς τα ρούχα σου όσο αλλά και το περιβάλλον. Χρειάζεται μικρότερη κατανάλωση ενέργειας αλλά και νερού, γι αυτό και σου εξοικονομεί πολλά χρήματα. Προτίμησε τα αντίστοιχα προγράμματα πλυντηρίου ρούχων για ρούχα όπως αθλητικά, ευαίσθητα, τζιν, κοντομάνικα μπλουζάκια, σκούρα και χρωματιστά. Η χαμηλή θερμοκρασία θα βοηθήσει να κρατήσουν περισσότερο και να μη ξεβάφουν τα ρούχα σου.</string>
    <string name="text_40">Οι 40 βαθμοί είναι ιδανική θερμοκρασία για να πλένεις τα σεντόνια, τις πετσέτες και άλλα ρούχα του σπιτιού φτιαγμένα από 100% βαμβάκι. Επιπλέον μπορείς να τους προτιμήσεις για ρούχα με επίμονους λεκέδες, έχοντας τοποθετήσει προηγουμένως, τοπικά, λίγο απορρυπαντικό.</string>
    <string name="text_60">Όσο υψηλότερη είναι η θερμοκρασία πλύσης, τόσο υψηλότερη είναι η αποστείρωση και ο αποτελεσματικός καθαρισμός των λεκέδων. Τα προγράμματα πλυντηρίου ρούχων με θερμοκρασία 60 βαθμών σου προσφέρουν άψογη καθαριότητα αλλά και αποστείρωση. Επίλεξέ τα για λευκά, χρωματιστά ρούχα που δε ξεβάφουν και εσώρουχα.</string>
    <string name="text_90">Στους 90 βαθμούς μπορείτε να πλύνετε ολόλευκα βαμβακερά και λινά ρούχα. Μπορείτε ακόμα να πλύνετε εσώρουχα για μεγαλύτερη αποστείρωση</string>
    <string name="successful_laundring">Η ΠΛΥΣΗ ΟΛΟΚΛΗΡΩΘΗΚΕ ΜΕ ΕΠΙΤΥΧΙΑ</string>
    <string name="schedule">ΠΡΟΓΡΑΜΜΑΤΙΣΜΟΣ ΠΛΥΣΗΣ</string>


    <string-array name="languages">
        <item>30</item>
        <item>40</item>
        <item>60</item>
        <item>90</item>
    </string-array>
</resources>