<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8dc2e3"
    tools:context=".FirstFragment">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="134dp"
        android:layout_height="87dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="420dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/info" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="247dp"
        android:layout_marginTop="162dp"
        android:layout_marginBottom="266dp"
        android:text="@string/advices"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="233dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="530dp"
        android:layout_marginTop="243dp"
        android:layout_marginEnd="322dp"
        android:layout_marginBottom="185dp"
        android:text="@string/in_60"
        android:textAlignment="center"
        android:textColor="#033145"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="233dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="755dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="184dp"
        android:text="@string/in_90"
        android:textAlignment="center"
        android:textColor="#033145"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="293dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="780dp"
        android:layout_marginBottom="193dp"
        android:text="@string/in_30"
        android:textAlignment="center"
        android:textColor="#033145"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="274dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="255dp"
        android:layout_marginTop="243dp"
        android:layout_marginEnd="555dp"
        android:layout_marginBottom="199dp"
        android:text="@string/in_40"
        android:textAlignment="center"
        android:textColor="#033145"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="230dp"
        android:layout_height="270dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="785dp"
        android:layout_marginBottom="-110dp"
        android:text="@string/text_30" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="277dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="538dp"
        android:layout_marginBottom="-81dp"
        android:text="@string/text_40" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="219dp"
        android:layout_height="230dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="546dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="318dp"
        android:layout_marginBottom="-92dp"
        android:text="@string/text_60" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="219dp"
        android:layout_height="230dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="773dp"
        android:layout_marginTop="347dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="-91dp"
        android:text="@string/text_90" />

    <ImageButton
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="22dp"
        android:backgroundTint="#8dc2e3"
        app:srcCompat="@drawable/exit" />

    <ImageButton
        android:id="@+id/homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#8dc2e3"
        app:layout_constraintHorizontal_bias="0.164"
        app:srcCompat="@drawable/home" />


</RelativeLayout>