<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8dc2e3"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <View
        android:id="@+id/divider"
        android:src="@android:drawable/divider_horizontal_bright"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#313336"/>

    <TextClock
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:format24Hour="hh:mm:ss"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@id/divider"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintLeft_toRightOf="@id/date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@id/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="99dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="82dp"
        android:layout_marginTop="177dp"
        android:layout_marginEnd="81dp"
        android:theme="@style/Widget.AppCompat.ProgressBar.Horizontal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="420dp"
        android:layout_marginBottom="320dp"
        android:text="@string/working"
        android:textAlignment="center"
        android:textColor="#0C0B0B"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="212dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="491dp"
        android:layout_marginTop="34dp"
        android:text="@string/paused"
        android:textColor="#0B0101"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="457dp"
        android:layout_height="67dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="129dp"
        android:text="@string/example"
        android:textAlignment="center"
        android:textColor="#0B0101"
        android:textSize="24sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continued"
        android:layout_width="219dp"
        android:layout_height="112dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="192dp"
        android:layout_marginTop="280dp"
        android:backgroundTint="#068E0C"
        android:text="@string/continued"
        app:cornerRadius="30dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/door"
        android:layout_width="222dp"
        android:layout_height="115dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="185dp"
        android:backgroundTint="#DC0E0E"
        android:text="@string/cancel"
        app:cornerRadius="30dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="199dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="140dp"
        android:text="@string/on_pause"
        android:textColor="#FAFAFA"
        android:textSize="16sp" />


</RelativeLayout>