<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8dc2e3"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <ImageView
        android:layout_width="159dp"
        android:layout_height="106dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="280dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="293dp"
        android:background="#8dc2e3"
        app:srcCompat="@drawable/ic_check" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="689dp"
        android:layout_height="86dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="202dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="123dp"
        android:text="@string/successful_laundring"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_page"
        android:layout_width="219dp"
        android:layout_height="112dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="227dp"
        android:layout_marginTop="274dp"
        android:backgroundTint="#03A80A"
        android:text="@string/home_page"
        app:cornerRadius="30dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/door"
        android:layout_width="222dp"
        android:layout_height="115dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="271dp"
        android:layout_marginEnd="214dp"
        android:backgroundTint="#073B42"
        android:text="@string/door"
        app:cornerRadius="30dp" />


</RelativeLayout>