<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8dc2e3"
    tools:context=".FirstFragment">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="625dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="355dp"
        android:text="@string/favourite"
        android:textColor="#09700D"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextClock
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="568dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="378dp"
        android:format24Hour="hh:mm:ss"
        android:gravity="end"
        android:padding="20dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="-3dp"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="540dp"
        android:layout_marginBottom="412dp"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/normalcheckBox5"
        android:layout_width="141dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="186dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="597dp"
        android:buttonTint="#FFFFFF"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <CheckBox
        android:id="@+id/normalcheckBox6"
        android:layout_width="130dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="187dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="607dp"
        android:buttonTint="#FFFFFF" />

    <CheckBox
        android:id="@+id/normalcheckBox3"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="809dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="3dp"
        android:buttonTint="#FFFFFF" />

    <CheckBox
        android:id="@+id/normalcheckBox8"
        android:layout_width="73dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="598dp"
        android:layout_marginTop="111dp"
        android:buttonTint="#FFFFFF" />

    <CheckBox
        android:id="@+id/normalcheckBox9"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="602dp"
        android:layout_marginTop="189dp"
        android:buttonTint="#FFFFFF"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/normalcheckBox7"
        android:layout_width="141dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="187dp"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="596dp"
        android:buttonTint="#FFFFFF" />

    <TextView
        android:id="@+id/normal2"
        android:layout_width="163dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="168dp"
        android:layout_marginBottom="198dp"
        android:text="@string/light"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/normal4"
        android:layout_width="169dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="299dp"
        android:text="@string/normal15"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/normal9"
        android:layout_width="169dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="693dp"
        android:layout_marginTop="105dp"
        android:layout_marginBottom="280dp"
        android:text="@string/normal15"
        android:textAlignment="center"
        android:textColor="#047109"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/normal11"
        android:layout_width="169dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="694dp"
        android:layout_marginTop="168dp"
        android:layout_marginBottom="217dp"
        android:text="@string/fav_temp"
        android:textAlignment="center"
        android:textColor="#047109"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/normal5"
        android:layout_width="155dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="433dp"
        android:layout_marginTop="121dp"
        android:layout_marginBottom="255dp"
        android:text="@string/extra1"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/normal6"
        android:layout_width="152dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="703dp"
        android:layout_marginTop="233dp"
        android:layout_marginBottom="160dp"
        android:text="@string/extra2"
        android:textAlignment="center"
        android:textColor="#047109"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/normal10"
        android:layout_width="152dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="431dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="170dp"
        android:text="@string/extra2"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/normal3"
        android:layout_width="173dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="258dp"
        android:layout_marginBottom="106dp"
        android:text="@string/power"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textSize="20sp"
        android:textStyle="normal" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="143dp"
        android:layout_height="67dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="286dp"
        android:layout_marginTop="98dp"
        android:contentDescription="@string/spinner"
        android:spinnerMode="dropdown"
        android:text="@string/spinner"
        android:textAlignment="center"
        android:textColor="@color/white"
        tools:ignore="DuplicateSpeakableTextCheck"

        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="235dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="585dp"
        android:layout_marginBottom="379dp"
        android:text="@string/descr1"
        android:textColor="#212121"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="156dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="283dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="408dp"
        android:layout_marginBottom="364dp"
        android:text="@string/spinner"
        android:textColor="#212121"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="153dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="444dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="362dp"
        android:text="@string/descr2"
        android:textColor="#212121"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/start"
        android:layout_width="82dp"
        android:layout_height="53dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="18dp"
        android:background="#CCFF0000"
        android:backgroundTint="#8dc2e3"
        app:srcCompat="@android:drawable/ic_menu_send"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="-1dp"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="#0B0C0C"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/helper"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#091D8C"
        app:srcCompat="@android:drawable/ic_menu_help"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />


</RelativeLayout>
























